MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ./*)
  SET(dirlist)
  FOREACH(child ${children})
     IF(IS_DIRECTORY ${curdir}/${child})
	 LIST(APPEND dirlist ${child})
     ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

SET(SUBDIR)
SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_LIST_DIR})
message("Experiments found: ${SUBDIRS}")
FOREACH(subdir ${SUBDIRS})
  add_subdirectory(${subdir})
ENDFOREACH()
